@@ -56,6 +56,9 @@ Release 0.20.205.0 - unreleased
     MAPREDUCE-2524. Port reduce failure reporting semantics from trunk, to
     fail faulty maps more aggressively. (Thomas Graves via cdouglas)
 
+    MAPREDUCE-2529. Add support for regex-based shuffle metric counting
+    exceptions. (Thomas Graves via cdouglas)
+
 Release 0.20.204.0 - unreleased
 
   NEW FEATURES
